# bare-bluetooth-apple

./: .gitignore  CMakeLists.txt  README.md  binding.m  binding.mm  index.d.ts  index.js  package.json  test.js
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
examples/full-test/: client.js  server.js
examples/ping-pong/: client.js  server.js
lib/: central.d.ts  central.js  channel.d.ts  channel.js  characteristic.d.ts  characteristic.js  errors.d.ts  errors.js  peripheral-manager.d.ts  peripheral-manager.js  peripheral.d.ts  peripheral.js  server.d.ts  server.js  service.d.ts  service.js
test/: central.js  characteristic.js  helpers.js  l2cap.js  peripheral-manager.js  peripheral.js  server.js  service-data.js  service.js
